refactor to keep both event listeners

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,8 +79,7 @@
 
 @media only screen and (min-width: 769px) {
     .input {
-        position: absolute;
-        left: -10000px;
+        display: none;
     }
   }
 
